@@ -1,3 +1,12 @@
+2026-02-16T01:53:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22047495951 # 879
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 219 286 / 221 288
+* notice: next accum: outdated-unq outdated-all / unq all: 220 287 / 222 289
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28 2026-01-29 2026-01-30 2026-01-31] / [2026-02-07]
+
 2026-02-15T01:57:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22027876405 # 878
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-15
